[package]
name = "thymine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
rust-sitter = "0.3.4"

[build-dependencies]
rust-sitter-tool = "0.3.4"
